--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,7 +1,9 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>PalPlanner</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Services</h1>
 
-Welcome to your new app.
+<NavLink class="nav-link" href="chat">
+    <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Chat
+</NavLink>
