Add game component

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -16,7 +16,13 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="chat">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Chat
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Chat
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="game">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Game
             </NavLink>
         </div>
     </nav>
